# messing-with-OpenGL

./: .gitmodules  CMakeLists.txt  Color.hpp  Cube.hpp  Matrix.hpp  README.md  Shader.cpp  Texture.hpp  Triangle.hpp  main.cpp  triangles.frag  triangles.frag2  triangles.vert  vcpkg.json
